# LBM

./: CMakeLists.txt  CMakeLists.txt~  README.md
doc/: olb-0.7r1.tgz
doc/olb-0.7r1/: Makefile  Makefile.inc
doc/olb-0.7r1/examples/bstep2d/: bstep2d.cpp
doc/olb-0.7r1/examples/bstep3d/: Makefile  bstep3d.cpp
doc/olb-0.7r1/examples/cavity2d/: cavity2d.cpp  cavity2d.xml  description_cavity2d.xml
doc/olb-0.7r1/examples/cavity3d/: cavity3d.cpp
doc/olb-0.7r1/examples/cavity3d_cuboid_mpi/: cavity3d.cpp
doc/olb-0.7r1/examples/cylinder2d/: cylinder2d.cpp
doc/olb-0.7r1/examples/cylinder3d/: cylinder3d.cpp
doc/olb-0.7r1/examples/forcedPoiseuille2d/: forcedPoiseuille.cpp
doc/olb-0.7r1/examples/mrt2d/: poiseuille.cpp
doc/olb-0.7r1/examples/multiComponent2d/: rayleighTaylor.cpp
doc/olb-0.7r1/examples/multiComponent3d/: rayleighTaylor3d.cpp
doc/olb-0.7r1/examples/poiseuille2d/: poiseuille.cpp
doc/olb-0.7r1/examples/thermal2d/: rayleigh_benard2D.cpp
doc/olb-0.7r1/examples/thermal3d/: rayleigh_benard3D.cpp
doc/olb-0.7r1/src/: olb2D.h  olb3D.h
doc/olb-0.7r1/src/boundaryConditions/: boundaryConditions2D.h  boundaryConditions3D.h  extendedFiniteDifferenceBoundary2D.cpp  extendedFiniteDifferenceBoundary2D.h  extendedFiniteDifferenceBoundary3D.cpp  extendedFiniteDifferenceBoundary3D.h  inamuroAnalyticalDynamics.cpp  inamuroAnalyticalDynamics.h  (+12 more)
include/: Lattice.hpp  Parameters.hpp  Simulation.hpp  Type.hpp  Vector.hpp
src/: Lattice.cpp  Parameters.cpp  Simulation.cpp
src/imageClass/: GrayScaleImage.cpp  GrayScaleImage.h  lodepng.cpp
test/: main.cpp
(+261 files in other folders)
